Sonar fixes.